--- a/Tutorial.Rmd
+++ b/Tutorial.Rmd
@@ -176,17 +176,17 @@ mean(gapminder$gdpPercap[gapminder$continent == "Oceania"])
 That's a lot of repetition! To make matters worse, what if we wanted to add these values to our original data frame as a new column? We would have to write something like this:
 
 ```{r}
-gapminder$mean.continent.GDP <- NA
+gapminder$mean_continent_GDP <- NA
 
-gapminder$mean.continent.GDP[gapminder$continent == "Africa"] <- mean(gapminder$gdpPercap[gapminder$continent == "Africa"])
+gapminder$mean_continent_GDP[gapminder$continent == "Africa"] <- mean(gapminder$gdpPercap[gapminder$continent == "Africa"])
 
-gapminder$mean.continent.GDP[gapminder$continent == "Americas"] <- mean(gapminder$gdpPercap[gapminder$continent == "Americas"])
+gapminder$mean_continent_GDP[gapminder$continent == "Americas"] <- mean(gapminder$gdpPercap[gapminder$continent == "Americas"])
 
-gapminder$mean.continent.GDP[gapminder$continent == "Asia"] <- mean(gapminder$gdpPercap[gapminder$continent == "Asia"])
+gapminder$mean_continent_GDP[gapminder$continent == "Asia"] <- mean(gapminder$gdpPercap[gapminder$continent == "Asia"])
 
-gapminder$mean.continent.GDP[gapminder$continent == "Europe"] <- mean(gapminder$gdpPercap[gapminder$continent == "Europe"])
+gapminder$mean_continent_GDP[gapminder$continent == "Europe"] <- mean(gapminder$gdpPercap[gapminder$continent == "Europe"])
 
-gapminder$mean.continent.GDP[gapminder$continent == "Oceania"] <- mean(gapminder$gdpPercap[gapminder$continent == "Oceania"])
+gapminder$mean_continent_GDP[gapminder$continent == "Oceania"] <- mean(gapminder$gdpPercap[gapminder$continent == "Oceania"])
 ```
 
 You can see how this can get pretty tedious, especially if we want to calculate more complicated or refined statistics. We could use loops or apply functions, but these can be difficult, slow, or error-prone. 
@@ -204,7 +204,7 @@ Luckily, `dplyr` offers a much cleaner, more straightforward solution to this pr
 
 ```{r}
 # remove this column -- there's a better way!
-gapminder$mean.continent.GDP <- NULL
+gapminder$mean_continent_GDP <- NULL
 ```
 
 #group_by()
@@ -543,9 +543,16 @@ head(gapminder)
 
 # Exercise 5
 
-1. Ungroup the results from Exercise 4, above (i.e. use the `ungroup` function), the subset them to select only the `country`, `year`, and `gdpPercap_diff` columns. Use `tidyr` put it in wide format so that countries are rows and years are columns. 
+1. Ungroup the results from Exercise 4, above (i.e. use the `ungroup` function), the subset them to select only the `country`, `year`, and `gdpPercap_diff` columns. Use `tidyr` put it in wide format so that countries are rows and years are columns. Note: You will need to re-run the code but keep `country` in your data frame. We have provided the code below to do this!
 
 2. Now turn the dataframe above back into the long format with three columns: `country`, `year`, and `gdpPercap_diff`.
+
+```{r, include=F}
+gapminder_gdpPercap_diff <- gapminder %>%  group_by(continent, year) %>% 
+   mutate(mean_continent_gdp = mean(gdpPercap),
+          gdpPercap_diff = gdpPercap - mean_continent_gdp)
+```
+
 
 ```{r, include=F}
 #YOUR CODE HERE
