--- a/Tutorial.Rmd
+++ b/Tutorial.Rmd
@@ -1,15 +1,13 @@
 ---
 title: "R Data Wrangling and Manipulation"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
-author:
-- Rochelle Terman (rterman@gmail.com)
-- Josh Quan (joshua.quan@berkeley.edu)
+theme: readable
 output:
   html_document:
     toc: true
     toc_float: true
-editor_options: 
-  chunk_output_type: console
+    number_sections: true
+    fig_width: 12
+    fig_height: 7
 ---
 
 
